# HealthAdAttrib-StatAI

./: CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  environment.yml  pyproject.toml  requirements.txt
data/: README.md
docs/: paper-outline.md
docs/paper-latex/: main.tex
haattrib/: __init__.py  data.py  eval.py  preprocess.py  utils.py  viz.py
haattrib/dashboard/: app.py
haattrib/models/: deepseq.py  logistic.py  markov.py  shapley.py
haattrib/scripts/: make_dataset.py  run_all.py
tests/: test_markov.py  test_sim.py
